--- a/_data/brume.yml
+++ b/_data/brume.yml
@@ -1,3 +1,4 @@
-name: Brume
-author:
-description:
+name: cyningsun
+author: cyningsun
+description: Life's a Struggle
+email: sunyinhangscut@gmail.com
