--- a/_data/brume.yml
+++ b/_data/brume.yml
@@ -1,4 +1,4 @@
 name: cyningsun
 author: cyningsun
-description: Life's a Struggle
+description: Life's a Struggle!
 email: sunyinhangscut@gmail.com
