--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@ kramdown:
     - autolink
     - footnotes
     - smart
-  use_coderay: true
+  enable_coderay: true
   syntax_highlighter: rouge
   coderay:
     coderay_line_numbers:  nil
@@ -18,4 +18,4 @@ timezone: Asia/Shanghai
 excerpt_separator: ""
 paginate: 10
 
-gems: [jekyll-paginate]
+plugins: [jekyll-paginate]
