--- a/_config.yml
+++ b/_config.yml
@@ -4,11 +4,10 @@ encoding: UTF-8
 markdown: kramdown
 permalink: /:month-:day-:year/:title.html
 description: 博学、慎思、明辨、笃行
+weibo: http://weibo.com/CyningSun
+gmail: mailto:sunyinhangscut@gmail.com
+douban: https://www.douban.com/people/cyningscut
 github: https://github.com/cyningsun
-twitter: http://www.twitter.com/
-facebook: http://www.facebook.com
-linkedin: http://www.linkedin.com
-email: cyningsun[at]gmail.com
 
 kramdown:
   input: GFM
